syntax = "proto2";

import "common_player_define.proto";
// 客户端和服务器通信消息
// C Client, L LoginServer, D DBServer, S GameServer
// CS 即C-发送->S



//////////////////////////////////////////////////////////////////////////
/// 诈金花相关消息
//////////////////////////////////////////////////////////////////////////

// 出牌类型
enum ZHAJINHUA_CARD_TYPE {
	ZHAJINHUA_CARD_TYPE_ERROR				= 0;								//错误类型
	ZHAJINHUA_CARD_TYPE_SPECIAL				= 1;								//特殊类型
	ZHAJINHUA_CARD_TYPE_SINGLE				= 2;								//单牌类型
	ZHAJINHUA_CARD_TYPE_DOUBLE				= 3;								//对子类型
	ZHAJINHUA_CARD_TYPE_SHUN_ZI				= 4;								//顺子类型
	ZHAJINHUA_CARD_TYPE_JIN_HUA				= 5;								//金花类型
	ZHAJINHUA_CARD_TYPE_SHUN_JIN			= 6;								//顺金类型
	ZHAJINHUA_CARD_TYPE_BAO_ZI				= 7;								//豹子类型
}


// 游戏开始
message SC_ZhaJinHuaStart {
	enum MsgID { ID = 16002; }
	optional int32 banker_chair_id = 1;				// 庄家用户
	repeated int32 chair_id = 2;					// 椅子
	repeated int32 guid = 3;						
}

// 用户加注
message CS_ZhaJinHuaAddScore {
	enum MsgID { ID = 16003; Target = 2; }
	optional int64 score = 1;						// 加注数目
}
message SC_ZhaJinHuaAddScore {
	enum MsgID { ID = 16004; }
	optional int32 add_score_chair_id = 1;			// 加注用户
	optional int32 cur_chair_id = 2;				// 当前玩家
	optional int64 score = 3;						// 加注数目
	optional int64 money = 4;						// 花费钱
	optional int32 is_all = 5;			         	// 是否全压 2 全压  3 非全压   0无法收到
}

// 放弃跟注
message CS_ZhaJinHuaGiveUp {
	enum MsgID { ID = 16005; Target = 2; }
}
message SC_ZhaJinHuaGiveUp {
	enum MsgID { ID = 16006; }
	optional int32 giveup_chair_id = 1;				// 放弃用户
	optional int32 cur_chair_id = 2;				// 当前玩家
}

// 看牌
message CS_ZhaJinHuaLookCard {
	enum MsgID { ID = 16007; Target = 2; }
}
message SC_ZhaJinHuaLookCard {
	enum MsgID { ID = 16008; }
	optional int32 lookcard_chair_id = 1;			// 看牌用户
	repeated int32 cards = 2;						// 扑克列表
}
message SC_ZhaJinHuaNotifyLookCard {
	enum MsgID { ID = 16009; }
	optional int32 lookcard_chair_id = 1;			// 看牌用户
}

// 比牌
message CS_ZhaJinHuaCompareCard {
	enum MsgID { ID = 16010; Target = 2; }
	optional int32 compare_chair_id = 1;			// 比牌用户
}
message SC_ZhaJinHuaCompareCard {
	enum MsgID { ID = 16011; }
	optional int32 cur_chair_id = 1;				// 当前玩家
	optional int32 win_chair_id = 2;				// 赢牌用户
	optional int32 lost_chair_id = 3;				// 输牌用户
	optional int32 is_all = 4;                      // 是否全压比牌 2 全压  3 非全压   0无法收到
}

// 游戏结束
message ZhaJinHuaPlayerConclude {
	optional int32 chair_id = 1;					// 用户
	optional int32 score = 2;						// 得分
	repeated int32 cards = 3;						// 扑克列表
	optional int32 guid = 4;	
	optional int32 header_icon = 5[default = 0]; 	// 头像
	optional string name = 6;                       // 名字
	optional int32 status = 7;                      // 状态
	
}
message SC_ZhaJinHuaEnd {
	enum MsgID { ID = 16012; }
	optional int32 win_chair_id = 1;				// 赢牌用户
	repeated ZhaJinHuaPlayerConclude pb_conclude = 2; 	// 玩家结果	
	optional int32 tax = 3;				// 税
}


message SC_ZhaJinHuaReConnect {
	enum MsgID { ID = 16013; }
	optional int32 chair_id = 1;				// 用户椅子
	optional int32 banker_chair_id = 2;			// 庄家用户
	optional bool  isseecard = 3;				// 是否看牌
	repeated int32 cards = 4;					// 扑克列表--未看牌无有效值
	repeated int32 dead_chair = 5;			    // 出局列表
	optional int32 totalmoney = 6;              // 总金
	optional int32 score = 7;                   // 当前单注
	optional int32 round = 8;                   // 当前回合 最大20
	repeated int32 playermoney = 9;			    // 玩家消耗金钱
}


message SC_ZhaJinHuaWatch {
	enum MsgID { ID = 16014; }
	repeated int32 status = 1;					// 玩家状态
	repeated bool  isseecard = 2;				// 是否看牌
	optional int32 banker_chair_id = 3;			// 庄家用户
	optional int32 room_status = 4;			    // 房间状态
	optional int32 totalmoney = 5;              // 总金
	optional int32 score = 6;                   // 当前单注
	optional int32 round = 7;                   // 当前回合 最大20
	repeated int32 playermoney = 8;			    // 玩家消耗金钱
	repeated int32 allbet = 9;                  // 每轮下注情况
}
//获取用户状态
message CS_ZhaJinHuaGetPlayerStatus {
	enum MsgID { ID = 16015; Target = 2; }
}
message CS_ZhaJinHuaGetSitDown
{
	enum MsgID { ID = 16016; Target = 2; }
}

message SC_ZhaJinHuaGetSitDown
{
	enum MsgID { ID = 16017; }
	optional int32 room_id = 1;
	optional int32 table_id = 2;
	optional int32 chair_id = 3;
	optional int32 result = 4;						// GAME_SERVER_RESULT
	repeated PlayerVisualInfo pb_visual_info = 5;	// 同桌玩家	
	optional int32 game_id = 6;
	optional int32 first_game_type = 7;				// 一级菜单
	optional int32 second_game_type = 8;			// 二级菜单
}

message SC_ZhaJinHuaLostCards
{
	enum MsgID { ID = 16018; }
	repeated int32 win_cards = 1;					// 扑克列表--赢家
	repeated int32 loster_cards = 2;				// 扑克列表--输家	
}

message SC_ZhaJinHuaReadyTime
{
	enum MsgID { ID = 16019; }
	optional int32 time = 1;                    //剩余准备时间
}

message SC_ZhaJinHuaClientReadyTime
{
	enum MsgID { ID = 16020; }
	optional int32 time = 1;                    //剩余准备时间
}

